minor changes for registration and logon
